HelloUltraviolet/Fixtures/RejectedSource/Comptime/EmitterEmitNonItem/Expected.uv
//! Expected diagnostic metadata for the EmitterEmitNonItem rejected-source specimen.

expectedDiagnostic("E-CTE-0251", "requirement.22.TypeEmitterEmitTypeRequirement")
expectedDiagnostic("E-CTE-0251", "requirement.22.EmitterEmitWellFormedness")
expectedDiagnostic("E-CTE-0251", "diagnostics.22.CompileTimeCapabilitiesDiagnosticsReference")
